@@ -8,10 +8,13 @@ RECENT CHANGES to the 'zipfR' package:
     postdlnre(), including log-transformed version postldlnre(), as well as
     cumulative probability postplnre() and quantiles postqlnre() where available
   - Good-Turing estimates with gtlnre()
+  - Zipf-ranking plots for type-frequency lists (of class "tfl")
   - file I/O automatically compresses/decompresses ".gz" files in functions
     read.tfl(), read.spc(), read.vgc(), write.tfl(), write.spc(), write.vgc()
   - dropped support for very old R versions (before 2.3.1 or so),
-    where read.delim() does not accept comment.char= option
+    where read.delim() does not accept comment.char= option; now requires 2.10.1+
+  - removed zipfR.legend() function since standard legend() now offers the same
+    convenient placement options
   - added citation details (file inst/CITATION), which can be displayed with
     citation(package="zipfR")
   - upgraded to GPL v3
